# tg-moneybox

./: .env  config.py  main.py  pyproject.toml  telegram_bot.py
alembic/: env.py
alembic/versions/: 8f00c92aaaad_commit.py
constants/: callback_data.py  commands.py  keyboards.py  messages.py
core/: base.py  db.py  models.py
servises/: api.py  token_db.py  validators.py
wallet/: config.py  consts.py  expenses.py  main.py
wallet/__pycache__/: headers.py
